<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_nav_background"
    android:backgroundTint="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="44dp" />

    <ImageButton
        android:id="@+id/closeFilter"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />


    <TextView
        android:id="@+id/filter_title"
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_options"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/closeFilter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/closeFilter" />

    <Button
        android:id="@+id/applyFilter"
        style="@style/Button"
        android:layout_width="86dp"
        android:layout_height="37dp"
        android:layout_marginEnd="20dp"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/closeFilter" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/closeFilter">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/MediumText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brand"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/brand_spinner"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginTop="8dp"
                android:background="@null" />

            <TextView
                style="@style/MediumText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/price"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/price_spinner"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginTop="8dp"
                android:background="@null" />

            <TextView
                style="@style/MediumText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/size"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/size_spinner"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="44dp"
                android:background="@null" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>