<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/location"
                style="@style/MediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="10dp"
                android:text="@string/location"
                android:textSize="15sp"
                app:drawableEndCompat="@drawable/ic_arrow_down"
                app:drawableStartCompat="@drawable/ic_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                app:layout_constraintBottom_toBottomOf="@+id/location"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_filter"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/titleCategory"
                style="@style/BoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/select_category"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@+id/allCategory"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location" />

            <TextView
                android:id="@+id/allCategory"
                style="@style/ColoredNormalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="33dp"
                android:text="@string/view_all"
                app:layout_constraintBottom_toBottomOf="@+id/titleCategory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/titleCategory" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:layout_marginTop="24dp"
                android:background="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleCategory"
                app:tabIndicator="@null"
                app:tabMode="scrollable"
                app:tabRippleColor="@null" />

            <EditText
                android:id="@+id/searchField"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/search_box"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="12dp"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:paddingStart="24dp"
                android:textAppearance="@style/HintAppearance"
                android:textCursorDrawable="@null"
                app:layout_constraintEnd_toStartOf="@+id/qrCodeButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

            <ImageButton
                android:id="@+id/qrCodeButton"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="37dp"
                android:background="@drawable/oval"
                android:backgroundTint="@color/orange"
                app:layout_constraintBottom_toBottomOf="@+id/searchField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/searchField"
                app:layout_constraintTop_toTopOf="@+id/searchField"
                app:srcCompat="@drawable/ic_qr_code"
                tools:ignore="ContentDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/productList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchField"
                tools:itemCount="2"
                tools:listitem="@layout/item_hot_sales_block" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/bottomMenu"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@drawable/bottom_nav_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="68dp"
        android:paddingEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/BoldText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_explorer"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:paddingEnd="8dp"
            android:text="@string/explorer"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:itemIconSize="18dp"
            app:itemIconTint="@color/white"
            app:labelVisibilityMode="unlabeled"
            android:background="@color/dark_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_navigation_menu" />

    </LinearLayout>

    <include
        android:id="@+id/filterOptions"
        layout="@layout/bottom_sheet_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>